@@ -2,6 +2,15 @@ Priorities for release:
 !! documentation (eg new macros)
 * copyrights on m4 files, aclocal output
 
+* should skip AC_DEFUN lines; otherwise scanning aclocal.m4 can
+  mess up somewhat (eg think it sees a macro that is defined but
+  not used)
+
+* should not "handle" AC_SUBST($1), etc.  Ooops
+
+* should not put texiname_TEXINFOS into distribution
+  should rename this macro anyway, to foo_texi_DEPENDENCIES
+
 For now I guess I'll just have automake give an error if it encounters
 non-C source in a libtool library specification.
 
