@@ -20,7 +20,7 @@ comment2.test vpath.test symlink.test discover.test acinclude.test req.test \
 acsilent.test distdir.test lex2.test libobj4.test libobj5.test version.test \
 ranlib.test confvar.test confvar2.test stdlib.test cxxo.test colon2.test \
 colon3.test remake.test output.test output2.test remake2.test output3.test \
-output4.test colneq2.test
+output4.test colneq2.test subst.test
 
 EXTRA_DIST = defs $(TESTS)
 
