@@ -1,3 +1,7 @@
+Tue Dec 10 00:43:14 1996  Tom Tromey  <tromey@cygnus.com>
+
+	* subst.test: New file.
+
 Sun Dec  8 12:25:22 1996  Tom Tromey  <tromey@cygnus.com>
 
 	* colneq2.test: New file.
