@@ -1,4 +1,15 @@
+Tue Dec 10 00:41:17 1996  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (AC_SUBST_PATTERN): Check for alphanumeric variable
+	names only.  Test subst.test.
+
 Mon Dec  9 08:18:42 1996  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (file_contents_with_transform): Use ne, not !=, to
+	compare strings.  Compare against correct string.  From Jim
+	Meyering.
+	(handle_texinfo): Use rm -f to remove info files.  From Gord
+	Matzigkeit.
 
 	* Released 1.1l.
 
